netcfg (0.57) UNRELEASED; urgency=low

  * This version need more testing, and should not be uploaded for
    d-i beta3.
  * Bastian Blank
    - Use inet_pton and inet_ntop. Why must people always write its own
      instead of using well tested default functions?
    - Only recalculate gateway if ipaddress or netmask is changed.
    - Never recalculate nameserver.
  * Translators: do not modify this changelog to record changes you make to
    po files. A record of your contributions will be added to the changelog
    at package release time by the output-l10n-changes program.

 -- Jure Cuhalev <gandalf@a1200.rozica.com>  Mon, 15 Mar 2004 00:40:00 +0100

netcfg (0.56) unstable; urgency=low

  * Petter Reinholdtsen
    - Undo code changes done by Bastian Blank.  They need more testing
      so we only include the translations for beta3.

 -- Petter Reinholdtsen <pere@debian.org>  Sun, 14 Mar 2004 19:50:33 +0100

netcfg (0.55) unstable; urgency=low

  * Bastian Blank
    - Use inet_pton and inet_ntop. Why must people always write its own
      instead of using well tested default functions?
    - Only recalculate gateway if ipaddress or netmask is changed.
    - Never recalculate nameserver.
  * Translations:
    - Kęstutis Biliūnas: Updated Lithuanian translation (lt.po)
    - Jordi Mallach: Updated Catalan translation (ca.po)
    - Giuseppe Sacco: Updated italian translation (it.po)
    - Nikolai Prokoschenko: Russian updates (ru.po)

 -- Petter Reinholdtsen <pere@debian.org>  Sun, 14 Mar 2004 19:22:30 +0100

netcfg (0.54) unstable; urgency=low

  * Strip the binaries again. 

 -- Joey Hess <joeyh@debian.org>  Tue,  9 Mar 2004 15:38:56 -0500

netcfg (0.53) unstable; urgency=low

  * Fix dhcp killer to not segfault if the pid is < 1000 or > 9999.

 -- Joey Hess <joeyh@debian.org>  Tue,  9 Mar 2004 15:01:06 -0500

netcfg (0.52) unstable; urgency=low

  * Joey Hess
    - Fix "search (null)" in /etc/resolv.conf, again, sigh.
